--- a/src/app/lottie-splash/lottie-splash.page.html
+++ b/src/app/lottie-splash/lottie-splash.page.html
@@ -5,7 +5,7 @@
 <ion-content>
   <ng-lottie
     [options]="options"
-    (loopComplete)="animationCompleted($event)">
+    (loopComplete)="animationCompleted()">
   </ng-lottie>
 </ion-content>
 
